tests/snapshots/cmd_init__cmd_init::fresh_project-output.snap
---
source: tests/cmd_init.rs
expression: value
---
exit_code: 0
---stderr---
 Initialized ghat project in .github/ghat
