tests/snapshots/cmd_init__migration_all_defaults_already_present.snap
---
source: tests/cmd_init.rs
expression: output
---
exit_code: 0
---stderr---
 Initialized ghat project in .github/ghat
