tests/snapshots/cmd_init__migration_removes_old_check_workflow.snap
---
source: tests/cmd_init.rs
expression: output
---
exit_code: 0
---stderr---
     Removed old .github/workflows/ghat_check.yaml
       Added actions/checkout v4.2.2 (11bd71901bbe)
       Added actions/cache v4.2.0 (ab5e6d0c8710)
       Added actions/upload-artifact v4.6.0 (65c4c4a1ddee)
       Added actions/download-artifact v4.2.0 (fa0a91b85d4f)
 Initialized ghat project in .github/ghat
