tests/snapshots/cmd_init__migration_then_generate.snap
---
source: tests/cmd_init.rs
expression: p.generate_snapshot(&gen_output)
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ghat_check.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ghat_check.ts ---

workflow("ghat check", {
  on: triggers({
    push: [],
    pull_request: [],
  }),

  jobs(ctx) {
    ctx.job("Check", {
      runs_on: "ubuntu-latest",

      steps() {
        uses("actions/checkout")
        const URL = "https://github.com/jprochazk/ghat/releases/latest/download/ghat-installer.sh"
        run(`curl --proto '=https' --tlsv1.2 -LsSf ${URL} | sh`)
        run("ghat generate")
        run("git diff --exit-code")
      },
    })
  },
})
--- .github/workflows/generated_ghat_check.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: ghat check
on:
  push: {}
  pull_request: {}
jobs:
  check:
    name: Check
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
    - id: step_1
      run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/jprochazk/ghat/releases/latest/download/ghat-installer.sh | sh
    - id: step_2
      run: ghat generate
    - id: step_3
      run: git diff --exit-code
